# template-sop

./: Experiment.hs  NP.hs  template-sop.cabal
experiment/: Experiment.hs  Experiment2.hs  Instantiations.hs  NP.hs  NPCompare.hs  NPUse.hs  SOP.hs
src/Generics/SOP/: ExampleFunctions.hs  ExampleTypes.hs  Ryan.hs  Syntax.hs
src/Generics/SOP/Syntax/: TH.hs
