name: template-sop
version: 0.1
cabal-version: >= 2.0
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base,
    deepseq,
    generics-sop,
    template-haskell,
    th-abstraction,
    th-lift
  exposed-modules:
    Generics.SOP.Syntax
    Generics.SOP.Syntax.TH
    Generics.SOP.ExampleFunctions
    Generics.SOP.ExampleTypes
